tools/pi-hole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pi-hole
spec:
  selector:
    matchLabels:
      deployment: pi-hole
  template:
    metadata:
      labels:
        deployment: pi-hole
    spec:
      containers:
        - name: ftl
          image: pihole/pihole:latest
          command:
            - /usr/bin/pihole-FTL
            - no-daemon
          resources:
            limits:
              memory: 128Mi
              cpu: 500m
            requests:
              memory: 64Mi
              cpu: 10m
          ports:
            - containerPort: 53
              name: udpdns
              protocol: UDP
            - containerPort: 53
              name: tcpdns
              protocol: TCP
            - containerPort: 80
              name: http
              protocol: TCP
          securityContext:
            runAsNonRoot: true
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - NET_ADMIN
                - NET_RAW
          volumeMounts:
            - name: pihole-config
              mountPath: /etc/pihole
            - name: dnsmasq-config
              mountPath: /etc/dnsmasq.d
        - name: cron
          image: pihole/pihole:latest
          command:
            - /usr/bin/cron
            - -f
          resources:
            limits:
              memory: 128Mi
              cpu: 500m
            requests:
              memory: 64Mi
              cpu: 10m
          volumeMounts:
            - name: pihole-config
              mountPath: /etc/pihole
            - name: dnsmasq-config
              mountPath: /etc/dnsmasq.d
        - name: web-ui
          image: pihole/pihole:latest
          command:
            - lighttpd
            - -D
            - -f
            - /etc/lighttpd/lighttpd.conf
          resources:
            limits:
              memory: 128Mi
              cpu: 500m
            requests:
              memory: 64Mi
              cpu: 10m
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          securityContext:
            runAsNonRoot: true
            capabilities:
              add:
                - NET_BIND_SERVICE
          volumeMounts:
            - name: pihole-config
              mountPath: /etc/pihole
            - name: dnsmasq-config
              mountPath: /etc/dnsmasq.d
        - name: pihole-exporter
          image: ekofr/pihole-exporter:latest
          ports:
            - containerPort: 9617
              name: metrics
              protocol: TCP
          resources:
            limits:
              memory: 128Mi
              cpu: 50m
            requests:
              memory: 64Mi
              cpu: 10m
      volumes:
        - name: pihole-config
          persistentVolumeClaim:
            claimName: pihole-config
        - name: dnsmasq-config
          persistentVolumeClaim:
            claimName: dnsmasq-config
